--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -75,6 +75,8 @@
         </div>
     </div>
 
+    <div class="persons"></div>
+
     <div class="footer">
         <div class="container">
             <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
