--- a/pages/cards.html
+++ b/pages/cards.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Monster</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cards</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
-    <link rel="stylesheet" href="../css/monster.css">
+    <link rel="stylesheet" href="../css/cards.css">
 </head>
 <body>
+
 <div class="wrapper">
     <div class="header">
         <div class="container">
@@ -35,24 +37,29 @@
             </div>
         </div>
     </div>
-</div>
-<canvas id="canvas"></canvas>
+    
+    <div class="cards_block">
+        <div class="container">
+            <header>
+                <h3>Cards</h3>
+            </header>
+            <div class="cards"></div>
+        </div>
+    </div>        
 
-<div class="modal">
-    <div class="modal_dialog">
-        <div class="modal_content">
-            <form action="#">
-                <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
-            </form>
+    <div class="footer">
+        <div class="container">
+            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+                <div class="inner_footer">
+                    <h2>Made by NurDinBuy</h2>
+                </div>
+            </a>
         </div>
     </div>
+
 </div>
 
 </body>
-<script src="../js/monster.js"></script>
+<script src="../js/cards.js"></script>
 <script src="../js/modal.js"></script>
 </html>
